sort.basic.cocktail.AlgCocktailSort2.scala.code
def cocktailSort2() {
var n=getNombreValeurs() 
var a :Int = 1 
  
  while(a==1){
    a=0
  	var debut=1; var fin=n-1
    
    	for(j<-debut to fin){       
    			if(plusPetit(j-1, j)==false ){
      			echange(j-1, j)
        		a=1
      		}
       fin-=1
        
        
    for(j<-(debut to fin).reverse){ 
    	if (plusPetit(j-1, j)==false ){
      		echange(j-1, j)
        	a=1
      		}
     
      }
      debut+=1
      }	
      }